<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <ImageView

        android:id="@+id/item_icon"
        android:src="@drawable/laptop"
        android:layout_height="100dp"
        android:layout_width="100dp"
        android:contentDescription="@string/item_decription" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nom_item"
            android:textSize="30sp"
            android:textColor="@color/gris"
            />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:text="@string/price_item" />
    </RelativeLayout>

</LinearLayout>