<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:background="@drawable/fondlog2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="88dp">

       <!-- <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/logo"
            android:src="@mipmap/logo" />
         -->

        <EditText
            android:id="@+id/log"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:autofillHints="username"
            android:hint="@string/login"
            android:textSize="12sp"
            android:fontFamily="monospace"
            android:textColorHint="@color/gris"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/pass"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:autofillHints="password"
            android:hint="@string/passwd"
            android:textSize="12sp"
            android:fontFamily="monospace"
            android:textColorHint="@color/gris"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/oublie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:text="@string/oubli"
            android:textColor="@color/white"
            android:fontFamily="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/errcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginStart="-60dp"
            android:autofillHints="username"
            android:text="@string/error"
            android:textColor="@color/design_default_color_error"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

        <Button
            android:id="@+id/but_con2"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="-300dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/connect"
            android:fontFamily="sans-serif-black"
            android:background="@drawable/btnback"
            android:textColorHint="@color/green"
            android:backgroundTint="@color/white"
          />




</androidx.constraintlayout.widget.ConstraintLayout>