<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription"
    android:background="@drawable/fondlog2">

    <TextView
        android:id="@+id/insp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="180dp"
        android:text="@string/inscrit"
        android:textColor="@color/gris"
        android:textSize="40sp"
        android:fontFamily="sans-serif-light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/mail"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints="emailAddress"
        android:hint="@string/mail"
        android:textSize="12sp"
        android:fontFamily="monospace"
        android:textColorHint="@color/gris"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/insp3"/>
    <EditText
        android:id="@+id/passwdp3"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:autofillHints="password"
        android:hint="@string/passwd"
        android:textSize="12sp"
        android:fontFamily="monospace"
        android:textColorHint="@color/gris"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/mail"/>

    <EditText
        android:id="@+id/passwdconfp3"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:autofillHints="password"
        android:hint="@string/passwdconfir"
        android:textSize="12sp"
        android:fontFamily="monospace"
        android:textColorHint="@color/gris"
        android:inputType="textVisiblePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/passwdp3"/>
    <TextView
        android:id="@+id/textp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="-100dp"
        android:text="@string/textcode"
        android:textColor="@color/white2"
        android:textSize="15sp"
        android:fontFamily="sans-serif-black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/passwdconfp3"/>

    <EditText
        android:id="@+id/codep3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:autofillHints="creditCardSecurityCode"
        android:fontFamily="monospace"
        android:hint="0-0-0-0"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textColorHint="@color/gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/textp3" />

    <TextView
        android:id="@+id/errcod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="-160dp"
        android:autofillHints="password"
        android:text="@string/errorcod"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/codep3"/>

    <Button
        android:id="@+id/but_insp3"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/passwdconfp3"
        android:layout_marginTop="100dp"
        android:hint="@string/inscrit"
        android:backgroundTint="@color/gris"
        android:background="@drawable/btnback"
        android:backgroundTintMode="screen"
        android:textColorHint="@color/white"
        />

</androidx.constraintlayout.widget.ConstraintLayout>