<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fondlog1"
    >

    <TextView
        android:id="@+id/mot1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenue"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:fontFamily="serif-monospace"
        android:textColor="@color/white"
        android:layout_marginTop="-80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/but_con"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:layout_marginEnd="200dp"
        android:hint="@string/connect"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/green"

       />

    <Button
        android:id="@+id/but_ins"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="350dp"
        android:layout_marginStart="200dp"
        android:hint="@string/inscrit"
        android:backgroundTint="@color/white"
        android:backgroundTintMode="screen"
        android:textColorHint="@color/green"
        />

</androidx.constraintlayout.widget.ConstraintLayout>